# Python_Programming_Assignments

./: README.md
Pandas_arxiv_project/: README.md  docker-compose.yml  main.py  pyproject.toml  pyrightconfig.json  requirements.txt
Pandas_arxiv_project/data/: articles.csv
Pandas_arxiv_project/models/: mongo_models.py  sql_models.py
Pandas_arxiv_project/storage/: mariadb.py  mongodb.py
Pandas_arxiv_project/usecases/: pandas_pipeline.py  search_mongodb.py
Python_Programming_Assignments/: .gitignore
Python_Programming_Assignments/data_pipeline_project/: README.md  main.py  pyproject.toml  pyrightconfig.json
Python_Programming_Assignments/data_pipeline_project/data/: articles.csv
Python_Programming_Assignments/data_pipeline_project/models/: mongo_models.py  sql_models.py
Python_Programming_Assignments/data_pipeline_project/storage/: mariadb.py  mongodb.py
Python_Programming_Assignments/data_pipeline_project/usecases/: load_csv_to_mariadb.py  search_mongodb.py  transfer_mariadb_to_mongodb.py
