[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pandas-arxiv-pipeline"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "SQLAlchemy>=2.0.0",
  "PyMySQL>=1.1.0",
  "mongoengine>=0.27.0",
  "python-dotenv>=1.0.1",
  "pandas>=2.2.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E","F","I","UP","B","SIM"]
ignore = ["D"]
[tool.ruff.per-file-ignores]
"main.py" = ["T201"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_optional = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.setuptools]
packages = ["models","storage","usecases"]
